# project-delfos

./: .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
docs/: project_description.md  todo.md
scripts/: entrypoint.sh
scripts/data/: populate_data.py
src/api/: __init__.py
src/api/controllers/: __init__.py  data.py
src/api/models/: __init__.py  data.py
src/api/schemas/: __init__.py  data.py
src/api/views/: __init__.py
src/api/views/v1/: data.py
src/infrastructure/database/: __init__.py
src/infrastructure/database/migrations/: env.py
src/infrastructure/database/migrations/versions/: 8df4bbbeb05e_create_data_table.py  c62b05994b72_update_column_for_biginteger.py
src/infrastructure/database/utils/: session.py
src/infrastructure/server/: settings.py
tests/: conftest.py  factories.py
tests/api/controllers/: test_data.py
tests/api/models/: test_data.py
tests/api/schemas/: test_data.py
tests/api/views/: test_views.py
tests/infrastructure/database/: test_utils.py
